fix overflow

--- a/res/asa.css
+++ b/res/asa.css
@@ -116,7 +116,7 @@ body {
   border-radius: 0.5rem;
   max-height: 25%;
   min-height: 25%;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 .asa-track {
   padding: 0.2rem;
